--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,4 @@
-ext.flutterFFmpegPackage = 'audio-lts'
+//ext.flutterFFmpegPackage = 'audio-lts'
 
 group 'com.dooboolab.fluttersound'
 version '1.0-SNAPSHOT'
@@ -53,7 +53,7 @@ String safeExtGet(String prop, String fallback) {
 
 
 dependencies {
-    implementation 'com.arthenica:mobile-ffmpeg-' + safePackageName(safeExtGet('flutterFFmpegPackage', 'audio-lts')) + ':' + safePackageVersion(safeExtGet('flutterFFmpegPackage', 'audio-lts'), '4.3.1', '4.3.1')
+    //implementation 'com.arthenica:mobile-ffmpeg-' + safePackageName(safeExtGet('flutterFFmpegPackage', 'audio-lts')) + ':' + safePackageVersion(safeExtGet('flutterFFmpegPackage', 'audio-lts'), '4.3.1', '4.3.1')
     implementation 'androidx.core:core:1.0.0'
     implementation 'androidx.media:media:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
