--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -32,10 +32,6 @@ def parse_KV_file(file, separator='=')
   generated_key_values
 end
 
-#use_frameworks!
-#use_modular_headers!
-
-
 target 'Runner' do
   # Flutter Pod
 
@@ -75,11 +71,11 @@ target 'Runner' do
   plugin_pods.each do |name, path|
     symlink = File.join('.symlinks', 'plugins', name)
     File.symlink(path, symlink)
-    ###if name == 'flutter_ffmpeg'
-        ###pod name+'/audio-lts', :path => File.join(symlink, 'ios')
-    ###else
+    if name == 'flutter_ffmpeg'
+        pod name+'/audio-lts', :path => File.join(symlink, 'ios')
+    else
         pod name, :path => File.join(symlink, 'ios')
-    ###end
+    end
   end
 end
 
